# HTE_Anon_Tokyo

./: .gitignore  README.invisible-watermark.md  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy-frontend.yml  deploy-minimax-webui.yml
chat-clients/: lmcanvas-openai-proxy.md  lmcanvas-openai-proxy.py
examples/outputs/: comparison.json  prompt.txt  qwen_family_20260225_173204_comparison.json  qwen_family_20260225_173204_not_watermarked_raw.txt  qwen_family_20260225_173204_watermarked_raw.txt  watermarked_marker_view.txt  watermarked_raw.txt  watermarked_visible.txt
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  test_page.html
frontend/: index.html  package.json
frontend/src/app/: page.tsx
frontend/src/components/: watermark-tool.tsx
minimax-webui/: DEMO_RUNBOOK.md  README.md  app.py  lambda_handler.py  requirements.txt  test_e2e.py
minimax-webui/registry/: __init__.py  auth.py  chain.py  db.py  provenance.db
minimax-webui/static/: index.html
minimax-webui/static/registry/: anchor.html  chain.html  companies.html  demo-company.html  demo-user.html  demo.html  index.html  style.css  verify.html
minimax-webui/tests/: test_registry.py
src/watermark_llamacpp/: __init__.py  config.py  detector.py  gateway.py  install_engines.py  keys.py  payload.py  policy.py  statistical.py  zero_width.py
src/watermark_llamacpp/integrations/: __init__.py  (+4 more)
tests/: test_install_engines.py  test_integrations_common.py  test_payload.py  test_policy.py  test_statistical.py  test_zero_width.py
(+4 files in other folders)
